feat: add layout to rents

--- a/Lends/Views/Addresses/Create.cshtml
+++ b/Lends/Views/Addresses/Create.cshtml
@@ -26,7 +26,7 @@
                     <span asp-validation-for="AdditionalInformation" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary btn-create" />
+                    <input type="submit" value="Criar" class="btn btn-primary btn-create" />
                 </div>
             </form>
         </div>
