--- a/Lends/Views/Rents/Details.cshtml
+++ b/Lends/Views/Rents/Details.cshtml
@@ -4,44 +4,52 @@
     ViewData["Title"] = "Informações";
 }
 
-<h1>Informações</h1>
+<div class="jumbotron jumbotron-form">
 
-<div>
-    <h4>Aluguel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Game)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Game.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Client)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Client.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RentalDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RentalDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReturnDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReturnDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
+    <h1 class="h1-subcategories">Detalhes sobre o aluguel</h1>
+    <dl class="dl-style">
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Game)
+            </dt>
+            <dd class="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Game.Name)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Client)
+            </dt>
+            <dd class="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Client.Name)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.RentalDate)
+            </dt>
+            <dd class="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.RentalDate)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.ReturnDate)
+            </dt>
+            <dd class="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.ReturnDate)
+            </dd>
+        </div>
+        <div class="details-list">
+            <dt class="dt-item col-sm-2 dt-item-key">
+                @Html.DisplayNameFor(model => model.Price)
+            </dt>
+            <dd class="dt-item col-sm-2">
+                @Html.DisplayFor(model => model.Price)
+            </dd>
+        </div>
     </dl>
-</div>
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
+    </div>
 </div>
