--- a/Lends/Views/Addresses/Delete.cshtml
+++ b/Lends/Views/Addresses/Delete.cshtml
@@ -37,7 +37,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-outline-danger button-size" />
+        <input type="submit" value="Deletar" class="btn btn-outline-danger button-size" />
         <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
         @{
             if (!ViewData.ModelState.IsValid && ViewData.ModelState["Error"].Errors.Count > 0)
