--- a/Lends/Views/Rents/Delete.cshtml
+++ b/Lends/Views/Rents/Delete.cshtml
@@ -54,7 +54,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-outline-danger button-size" />
+        <input type="submit" value="Deletar" class="btn btn-outline-danger button-size" />
         <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
     </form>
 </div>
