--- a/Lends/Views/Rents/Index.cshtml
+++ b/Lends/Views/Rents/Index.cshtml
@@ -8,17 +8,18 @@
 
     <h1 class="h1-subcategories">Aluguéis</h1>
 
-    <p>
+    <div class="rent-buttons">
         <a asp-action="Create" class="btn btn-primary add-producer">Adicionar Aluguel</a>
-    </p>
-    <form asp-action="Index" method="get">
-        <div class="form-actions no-color">
-            <p>
-                <input name="rentSearch" type="submit" value="Listar inativos" class="btn btn-danger" /> 
-                <input asp-action="Index" type="submit" value="Listar ativos" class="btn btn-primary" /> 
-            </p>
-        </div>
-    </form>
+        <form asp-action="Index" method="get">
+            <div class="form-actions no-color form-rents">
+                <p>
+                    <input name="rentSearch" type="submit" value="Listar inativos" class="btn btn-primary add-producer rents rents-inactive" />
+                    <input asp-action="Index" type="submit" value="Listar ativos" class="btn btn-primary add-producer rents rents-active" />
+                </p>
+            </div>
+        </form>
+    </div>
+
     <table class="table table-hover">
         <thead>
             <tr>
