--- a/Lends/Views/Rents/Details.cshtml
+++ b/Lends/Views/Rents/Details.cshtml
@@ -45,7 +45,7 @@
                 @Html.DisplayNameFor(model => model.Price)
             </dt>
             <dd class="dt-item col-sm-2">
-                @Html.DisplayFor(model => model.Price)
+                R$ @Html.DisplayFor(model => model.Price)
             </dd>
         </div>
     </dl>
