--- a/Lends/Views/Rents/Delete.cshtml
+++ b/Lends/Views/Rents/Delete.cshtml
@@ -47,14 +47,25 @@
                 @Html.DisplayNameFor(model => model.Price)
             </dt>
             <dd class="dt-item col-sm-2">
-                @Html.DisplayFor(model => model.Price)
+                R$ @Html.DisplayFor(model => model.Price)
             </dd>
         </div>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Deletar" class="btn btn-outline-danger button-size" />
-        <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
+
+    <form asp-action="Delete" class="delete-buttons">
+        <div>
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Deletar" class="btn btn-outline-danger button-size" />
+            <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
+        </div>
+        @{
+            if (!ViewData.ModelState.IsValid && ViewData.ModelState["Error"].Errors.Count > 0)
+            {
+                <div class="alert alert-dismissible alert-warning alert-size">
+                    <button type="button" class="close close-button" data-dismiss="alert">&times;</button>
+                    <p class="mb-0">Não é possível deletar esse aluguel.</p>
+                </div>
+            }
+        }
     </form>
 </div>
