--- a/Lends/Views/Rents/ReturnGame.cshtml
+++ b/Lends/Views/Rents/ReturnGame.cshtml
@@ -52,7 +52,7 @@
         </div>
     </dl>
     
-    <form asp-action="ReturnBook">
+    <form asp-action="ReturnGame">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Devolver" class="btn btn-outline-danger button-size" />
         <a asp-action="Index" class="btn btn-outline-warning button-size">Retornar</a>
