--- a/Lends/Views/Home/Index.cshtml
+++ b/Lends/Views/Home/Index.cshtml
@@ -2,6 +2,30 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Bem-vindo Admin!</h1>
+<h1 class="h1-home">Bem-vind(e)</h1>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img class="d-block w-100 carousel-1" src="https://raw.githubusercontent.com/fernanda-dionello/Lends-Website/main/img/todos-jogam.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+        <img class="d-block w-100 carousel-2" src="https://raw.githubusercontent.com/fernanda-dionello/Lends-Website/main/img/kittens.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+        <img class="d-block w-100 carousel-3" src="https://raw.githubusercontent.com/fernanda-dionello/Lends-Website/main/img/covid.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
