--- a/Lends/Views/Home/Index.cshtml
+++ b/Lends/Views/Home/Index.cshtml
@@ -2,8 +2,7 @@
     ViewData["Title"] = "Home";
 }
 
-<h1 class="h1-home">Bem-vind(e)</h1>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide carousel-home" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -11,13 +10,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img class="d-block w-100 carousel-1" src="https://raw.githubusercontent.com/fernanda-dionello/Lends-Website/main/img/todos-jogam.png" alt="First slide">
+        <img class="d-block w-100 carousel-1" src="https://lh3.googleusercontent.com/p/AF1QipMLyo1bJB4NTbqmjBkulH0fbwcipmOKrL9AHK5x=s1360-w1360-h1020" alt="First slide">
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100 carousel-2" src="https://raw.githubusercontent.com/fernanda-dionello/Lends-Website/main/img/kittens.png" alt="Second slide">
+        <img class="d-block w-100 carousel-2" src="https://lh3.googleusercontent.com/p/AF1QipNh46bPC6ZqwvWIDx6Jdq41k31eDXUPV1_R2zX-=s1360-w1360-h1020" alt="Second slide">
     </div>
     <div class="carousel-item">
-        <img class="d-block w-100 carousel-3" src="https://raw.githubusercontent.com/fernanda-dionello/Lends-Website/main/img/covid.png" alt="Third slide">
+        <img class="d-block w-100 carousel-3" src="https://lh3.googleusercontent.com/p/AF1QipOV69tB8_7jWG3f0MbYwYMRQNZTkAJgY8K5wueZ=s1360-w1360-h1020" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
