--- a/Lends/wwwroot/css/site.css
+++ b/Lends/wwwroot/css/site.css
@@ -58,10 +58,6 @@ html {
   min-height: 100%;
 }
 
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
 .footer {
   position: absolute;
   bottom: 0;
@@ -285,26 +281,20 @@ body {
     font-size: 20px;
 }
 
-.carousel-1 {
-    background: #e45750;
-    border-radius: 20px;
-
-}
-
-.carousel-2 {
-    background: #464f58;
-    border-radius: 20px;
-
-}
-
-.carousel-3 {
-    background: #e4a624;
-    border-radius: 20px;
-
-}
-
 .h1-home {
     text-align: center;
     color: #e45750;
     margin: 25px 0px;
+}
+
+.carousel-item {
+    height: 510px;
+}
+
+.carousel-inner {
+    border-radius: 20px;
+}
+
+.carousel-home {
+    margin-top: 50px;
 }
