--- a/Lends/Views/Games/Create.cshtml
+++ b/Lends/Views/Games/Create.cshtml
@@ -5,73 +5,74 @@
     ViewData["Title"] = "Criar";
 }
 
-<h1>Criar</h1>
+<div class="jumbotron jumbotron-form">
+    <h1 class="h1-subcategories">Criar</h1>
 
-<h4>Jogo</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Game.Name" class="control-label"></label>
-                <input asp-for="Game.Name" class="form-control" />
-                <span asp-validation-for="Game.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.Category" class="control-label"></label>
-                <select asp-for="Game.Category" class="form-control"
-                        asp-items="@Html.GetEnumSelectList<CategoryType>()"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.ProducerId" class="control-label"></label>
-                <select asp-for="Game.ProducerId" class="form-control"
-                 asp-items="@(new SelectList(Model.Producers, "Id", "Name"))"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.MinPlayers" class="control-label"></label>
-                <input asp-for="Game.MinPlayers" class="form-control" />
-                <span asp-validation-for="Game.MinPlayers" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.MaxPlayers" class="control-label"></label>
-                <input asp-for="Game.MaxPlayers" class="form-control" />
-                <span asp-validation-for="Game.MaxPlayers" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.Duration" class="control-label"></label>
-                <input asp-for="Game.Duration" class="form-control" />
-                <span asp-validation-for="Game.Duration" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.Age" class="control-label"></label>
-                <input asp-for="Game.Age" class="form-control" />
-                <span asp-validation-for="Game.Age" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.RentPrice" class="control-label"></label>
-                <input asp-for="Game.RentPrice" class="form-control"/>
-                <span asp-validation-for="Game.RentPrice" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.Image" class="control-label"></label>
-                <input asp-for="Game.Image" class="form-control" />
-                <span asp-validation-for="Game.Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Game.Status" class="control-label"></label>
-                <select asp-for="Game.Status" class="form-control"
-                asp-items="@Html.GetEnumSelectList<GameStatus>()"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Game.Name" class="control-label"></label>
+                    <input asp-for="Game.Name" class="form-control" />
+                    <span asp-validation-for="Game.Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.Category" class="control-label"></label>
+                    <select asp-for="Game.Category" class="form-control"
+                            asp-items="@Html.GetEnumSelectList<CategoryType>()"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.ProducerId" class="control-label"></label>
+                    <select asp-for="Game.ProducerId" class="form-control"
+                     asp-items="@(new SelectList(Model.Producers, "Id", "Name"))"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.MinPlayers" class="control-label"></label>
+                    <input asp-for="Game.MinPlayers" class="form-control" />
+                    <span asp-validation-for="Game.MinPlayers" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.MaxPlayers" class="control-label"></label>
+                    <input asp-for="Game.MaxPlayers" class="form-control" />
+                    <span asp-validation-for="Game.MaxPlayers" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.Duration" class="control-label"></label>
+                    <input asp-for="Game.Duration" class="form-control" />
+                    <span asp-validation-for="Game.Duration" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.Age" class="control-label"></label>
+                    <input asp-for="Game.Age" class="form-control" />
+                    <span asp-validation-for="Game.Age" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.RentPrice" class="control-label"></label>
+                    <input asp-for="Game.RentPrice" class="form-control"/>
+                    <span asp-validation-for="Game.RentPrice" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.Image" class="control-label"></label>
+                    <input asp-for="Game.Image" class="form-control" />
+                    <span asp-validation-for="Game.Image" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Game.Status" class="control-label"></label>
+                    <select asp-for="Game.Status" class="form-control"
+                    asp-items="@Html.GetEnumSelectList<GameStatus>()"></select>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary btn-create" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <a asp-action="Index" class="btn btn-link">Retornar</a>
+    </div>
+
 </div>
 
 @section Scripts {
